# aruco_learn

./: CMakeLists.txt  measure_cam.txt  measure_cam_1.txt  measure_cam_2.txt  measure_cam_3.txt  measure_cam_4.txt  measure_cam_6.txt  measure_cam_a_2.txt  measure_cam_a_5.txt  measure_cam_far_1.txt  measure_cam_far_2.txt  measure_cam_far_3.txt  measure_obs.txt  measure_obs_1.txt  measure_obs_2.txt  measure_obs_3.txt  measure_obs_4.txt  measure_obs_5.txt  measure_obs_a_5.txt  measure_obs_far_1.txt  measure_obs_far_2.txt  measure_obs_far_3.txt  measure_test_1.txt  obstacle.txt  package.xml  plane_.txt  plane_measure.txt  readme.md  robot_corrrection.txt  robot_corrrection2.txt  robot_corrrection3.txt  robot_path.txt  robot_path2.txt  robot_path3.txt  robot_sense.txt  robot_sense2.txt  robot_sense3.txt
experiment_data/before_20200925/error_measurement/: measure_cam_1.txt  measure_cam_7.txt  measure_cam_a_1.txt  measure_obs_1.txt  measure_obs_3.txt  measure_obs_6.txt  measure_obs_a_1.txt  measure_obs_a_4.txt
experiment_data/before_20200925/path/: robot_path.txt  robot_sense.txt
experiment_data/before_20200925/plane_refinement/: measure_acc_new.txt  measure_cam_new.txt
experiment_data/error_measurement/: measure_cam_3.txt  measure_cam_5.txt  measure_cam_a_3.txt  measure_cam_far_1.txt  measure_cam_far_2.txt  measure_obs_2.txt  measure_obs_7.txt  measure_obs_a_2.txt  measure_obs_a_3.txt  measure_obs_far_1.txt
experiment_data/exp_20201013/: Exp1013-1.m4v  localization_node - Shortcut.lnk
launch/: aruco_detect.launch  cam_with_model.launch  launch_world.launch  start_cam.launch  start_main_func.launch  urdf.rviz
msg/: Camera_Data.msg  Camera_Data_error.msg  Status_Data.msg
scripts/: .data_process_and_comm_single.py.swp  Correction_Matrix.txt  Correction_Matrix_Backup.txt  Correction_Matrix_exp_1013.txt  Generate_Path.py  calibration.py  calibration_load.py  coordinate.txt  correction_service.py  data_comm.py  data_process.py  data_process_and_comm.py  data_process_and_comm_single.py  data_storage_only.py  error_measure.py  measure_acc_t1.txt  measure_acc_t2.txt  measure_acc_t3.txt  measure_acc_t4.txt  measure_acc_t5.txt  measure_acc_t6.txt  measure_acc_t7.txt  measure_acc_t8.txt  measure_acc_t9.txt  measure_cam_a_4.txt  measure_cam_t1.txt  measure_cam_t2.txt  measure_cam_t3.txt  measure_cam_t4.txt  measure_cam_t5.txt  measure_cam_t6.txt  measure_cam_t7.txt  measure_cam_t8.txt  measure_cam_t9.txt  measure_obs_new.txt  measure_obs_t1.txt  measure_obs_t2.txt  measure_obs_t3.txt  measure_obs_t4.txt  measure_obs_t5.txt  (+4 more)
src/: .cam_trans.cpp.swp  cam_error_measure.cpp  cam_trans.cpp  camera_localization.cpp  measure_obs_1.txt  my_aruco.cpp  my_world.cpp
srv/: correction_service.srv
(+28 files in other folders)
